<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/blue_background"
    android:orientation="vertical"
    tools:context="com.michielboswijk.madlibs.InputScreen"
    android:weightSum="1">

    <TextView
        android:text="@string/input_intro"
        android:id="@+id/input_intro"
        android:textSize="22sp"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textSize="22sp"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/words_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/words_left"
            android:textSize="17sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/word_input"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="text"/>

        <Button
            android:id="@+id/speak_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Talk"
            android:layout_marginTop="5dp"
            android:onClick="speechToText"/>

        <Button
            android:id="@+id/enter_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/enter_word"
            android:onClick="enterWord"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/select_story"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_story_button"
        android:onClick="changeStory"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>
</LinearLayout>
